--- a/Site/public/CSS/style.css
+++ b/Site/public/CSS/style.css
@@ -1,6 +1,46 @@
-body{
-    background-image: url(assets/imgs/Background/genshin-impact-loading.gif);
-    background-size: cover;
-    height: 100vh;
+body {
     margin: 0;
+    padding: 0;
+    font-family: 'Barlow', 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.header {
+    height: 100px;
+    border-bottom: 3px solid #32b9cd;
+    background-color: #1b1d2a;
+}
+
+.header .container {
+    width: 80%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+}
+
+.header a {
+    text-decoration: none;
+    color: #647ef8;
+}
+
+.agora {
+    font-weight: 800;
+  }
+
+.navbar {
+    width: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    list-style: none;
+    color: #647ef8;
+  }
+
+.banner {
+    height: fit-content;
+    padding: 40px 0;
+    background-image: url(".././assets/imgs/Background/banner.jpg");
+    background-size: cover;
+    height: 500px;
 }
