--- a/Site/public/CSS/cadastro_login.css
+++ b/Site/public/CSS/cadastro_login.css
@@ -23,6 +23,17 @@ video {
     align-items: center;
 }
 
+.inputbox input {
+    width: 100%;
+    border: none;
+    border-radius: 10px;
+    padding: 15px;
+    font-size: 12pt;
+    box-shadow: 0px 10px 40px #00000056;
+    outline: none;
+    box-sizing: border-box;
+}
+
 #div_erros_login {
     display: none
 }
@@ -77,4 +88,8 @@ video {
     background: #393b40;
     cursor: pointer;
     box-shadow: 0px 10px 40px -12px #393b40;
+}
+
+a {
+    color: #c79e2e;
 }
