--- a/Site/public/CSS/personagens.css
+++ b/Site/public/CSS/personagens.css
@@ -19,6 +19,10 @@ body {
     padding: 50px;
 }
 
+.div_contexto h1 {
+    text-transform: uppercase;
+}
+
 .div_contexto .img_arma {
     height: 350px;
     width: 622px;
@@ -28,8 +32,6 @@ body {
     height: 450px;
     width: 615px;
     padding-left: 4%;
-    /* border-radius: 20%; */
-    /* border: solid #1f1f1f; */
 }
 
 .div_card {
