--- a/Site/public/CSS/personagens.css
+++ b/Site/public/CSS/personagens.css
@@ -3,6 +3,19 @@ body {
     color: white;
 }
 
+.btBuscar {
+    width: 10%;
+    padding: 16px 0px;
+    border: none;
+    border-radius: 8px;
+    outline: none;
+    font-weight: 800;
+    color: #debc60;
+    background: #1b1d2a;
+    cursor: pointer;
+    box-shadow: 0px 10px 40px -12px #393b40;
+}
+
 .container1 {
     display: flex;
     justify-content: space-between;
