--- a/Site/public/CSS/randomizador.css
+++ b/Site/public/CSS/randomizador.css
@@ -1,3 +1,55 @@
 body {
     background-color: #4c4c4c;
 }
+
+.div_corpo {
+    display: flex;
+    justify-content: space-between;
+    padding: 1%;
+}
+
+.container1  {
+    padding-left: 40%;
+    padding-top: 7%;
+}
+
+.container1 .div_borda {
+    width: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #393b40;
+    border-radius: 5%;
+    padding: 10%;
+}
+
+.container1 button {
+    width: 220px;
+    padding: 16px 0px;
+    border: none;
+    border-radius: 8px;
+    outline: none;
+    font-weight: 800;
+    color: #debc60;
+    background: #1b1d2a;
+    cursor: pointer;
+    box-shadow: 0px 10px 40px -12px #393b40;
+}
+
+.container2 {
+    background-color: #393b40;
+    border: solid black 5px;
+    color: white;
+    border-radius: 5%;
+    height: 75px;
+    width: 150px;
+    padding-left: 4px;
+}
+
+.paimon {
+    height: 200px;
+    position: absolute;
+    bottom: 5px; 
+    right: 10px;
+}
