--- a/Site/public/CSS/personagens.css
+++ b/Site/public/CSS/personagens.css
@@ -22,6 +22,18 @@ body {
     box-shadow: 0px 10px 40px -12px #393b40;
 }
 
+#BtAnterior {
+    position: fixed;
+    bottom: 10px;
+    left: 5px;
+}
+
+#BtProximo {
+    position: fixed;
+    bottom: 10px;
+    right: 5px;
+}
+
 .container1 {
     display: flex;
     justify-content: space-between;
