--- a/Site/public/CSS/style.css
+++ b/Site/public/CSS/style.css
@@ -6,7 +6,7 @@ body {
 
 .header {
     height: 100px;
-    border-bottom: 3px solid #32b9cd;
+    border-bottom: 3px solid black;
     background-color: #1b1d2a;
 }
 
