--- a/Site/public/CSS/index.css
+++ b/Site/public/CSS/index.css
@@ -53,9 +53,9 @@
     align-items: center;
 }
 
-.onu_div .bunny_dance {
+.onu_div .kazuha {
     height: 300px;
-    position: absolute;
+    position: relative;
     bottom: -55px;
     z-index: 99999;
     right: 0;
@@ -77,13 +77,23 @@
 .onu_div .saude_bem_estar_div img {
     border: solid #393939 10px;
     border-radius: 10%;
-    width: 500px;
-    height: 500px;
+    width: 410px;
+    height: 410px;
 }
 
 .wishsimulator {
     align-items: center;
     display: flex;
     justify-content: center;
+}
+
+.footer {
+    color: #647ef8;
+    height: 100px;
+    border-top: 3px solid black;
+    background-color: #1b1d2a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
