--- a/Site/public/CSS/style.css
+++ b/Site/public/CSS/style.css
@@ -22,7 +22,14 @@ body {
 .header a {
     text-decoration: none;
     color: #647ef8;
+    transition: background-color 0.3s ease;
 }
+
+.header a:hover {
+    background-color: #333b68;
+    border-radius: 10px;
+    padding: 10px;
+  }
 
 .agora {
     font-weight: 1000;
